adding and fix code  and add style.css

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ hibernate.packagesToScan=com.yasmeen.cinema
 spring.profiles.active=dev
 spring.profiles=prod
 
-
+#enable_lazy_load_no_trans=true
 
